# qtlscan

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
qtlscan/: __init__.py  igs.py  log.py  phe.py  qtl.py  qtlscan.py  report.html  viz.py
qtlscan/templates/: report.html
