#[build-system]
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qtlscan"
version = "1.0.0"
description = "QTLScan: a toolkit for QTL detection, visualization, and genotype-to-phenotype prediction"
readme = "README.md"
requires-python = ">=3.8"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [
	{ name = "Xiaodong Li" },
]
keywords = [
	"GWAS", "QTL", "QTL network", "LD", "VCF",
	"machine learning", "SHAP", "LightGBM", "XGBoost"
]
classifiers = [
	"Programming Language :: Python :: 3",
	"Operating System :: OS Independent",
	"Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
	"numpy>=1.21",
	"pandas>=1.5",
	"scipy>=1.7",
	"scikit-learn>=1.0",
	"matplotlib>=3.6",
	"pysam>=0.17.0",
]

[project.optional-dependencies]
lgb = ["lightgbm>=4.0"]
xgb = ["xgboost>=1.7"]
shap = ["shap>=0.43"]
opt = ["scikit-optimize>=0.9.0"]
all = [
	"lightgbm>=4.0",
	"xgboost>=1.7",
	"shap>=0.43",
	"scikit-optimize>=0.9.0",
]

[project.scripts]
qtlscan = "qtlscan.qtlscan:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["qtlscan*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
# Include HTML template(s) and any other static resources under the qtlscan package
qtlscan = [
	"*.html",
	"**/*.html",
	"**/*.css",
	"**/*.js",
]
