#[build-system]
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qtlscan"
version = "1.0.0"
description = "QTLScan: a toolkit for QTL detection, network construction, and visualization in genome-wide association studies"
readme = "README.md"
requires-python = ">=3.8"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [
	{ name = "Xiaodong Li" },
]
keywords = [
	"GWAS", "QTL", "QTL network", "LD", "VCF"
]
classifiers = [
	"Programming Language :: Python :: 3",
	"Operating System :: OS Independent",
	"Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
	"numpy>=1.21",
	"pandas>=1.5",
	"scipy>=1.7",
	"matplotlib>=3.6",
	"pysam>=0.17.0",
	"jinja2>=3.0",
]

[project.scripts]
qtlscan = "qtlscan.qtlscan:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["qtlscan*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
# Include HTML template(s) and any other static resources under the qtlscan package
qtlscan = [
	"*.html",
	"**/*.html",
	"**/*.css",
	"**/*.js",
]
